# six-birds-currency

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
assets/: zenodo_related_works.csv
configs/final/: canonical_runs.yaml  tolerances.json
docs/experiments/final/: budget_summary.csv  claim_ledger.csv  dpi_summary.csv  idempotence_summary.csv  ladder_summary.csv  lean_summary.json  proxy_summary.csv  repro_audit.csv  repro_audit.json  (+1 more)
lean/: CurrencyMorphism.lean  README.md  lake-manifest.json  lakefile.lean
lean/CurrencyMorphism/: Basic.lean  FiniteKL.lean
paper/: Makefile  evidence_map.csv  figure_plan.md  final_checklist.md  macros.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  outline.md  references.bib
paper/sections/: 00_title_abstract.tex  01_intro.tex  02_framework.tex  03_methods.tex  04_results.tex  05_discussion.tex  06_conclusion.tex  appendix_a_evidence.tex  appendix_b_lean.tex  appendix_c_repro.tex
scripts/: demo_maxcal_single.py  demo_stationary.py  exp_budget_sweep.py  exp_currency_ladder.py  exp_dpi_scan.py  exp_idempotence_vs_budget.py  exp_proxy_ablation.py  export_final_assets.py  final_evidence_pack.py  index_results.py  repro_audit.py  smoke.py
src/currencymorphism/: audits_cycles.py  audits_pathkl.py  generators.py  lens.py  markov.py  maxcal_single.py  mle_logit.py  packaging.py  runlog.py
tests/: test_audits_cycles.py  test_audits_pathkl.py  test_generators.py  test_lens.py  test_markov.py  test_maxcal_single.py  test_mle_logit.py  test_packaging.py  test_runlog.py  test_smoke.py
